--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.10",
     "vue-cookie": "^1.1.4",
     "vue-custom-scrollbar": "^1.0.0",
+    "vue-google-charts": "^0.3.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vuedraggable": "^2.20.0",
